[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/stone_100x117.png" type="Texture" id=1]
[ext_resource path="res://images/goal_100x117.png" type="Texture" id=2]
[ext_resource path="res://images/dirt_100x117.png" type="Texture" id=3]
[ext_resource path="res://fonts/arialbd.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://images/RED_R_JCW96x64.png" type="Texture" id=5]
[ext_resource path="res://MainScene101.gd" type="Script" id=6]

[sub_resource type="TileSet" id=1]
0/name = "stone_100x117.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 100, 117 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "goal_100x117.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 100, 117 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "dirt_100x117.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 100, 117 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 4 )

[node name="MainScene101" type="Node2D"]
script = ExtResource( 6 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 50, 50 )
tile_set = SubResource( 1 )
cell_size = Vector2( 100, 87 )
cell_half_offset = 0
format = 1
tile_data = PoolIntArray( -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, 65535, 2, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 2, 0, 131071, 2, 0, 65536, 0, 0, 65537, 2, 0, 65538, 0, 0, 65539, 2, 0, 65540, 0, 0, 65541, 2, 0, 196607, 2, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 2, 0, 131076, 0, 0, 131077, 2, 0, 262143, 2, 0, 196608, 0, 0, 196609, 2, 0, 196610, 0, 0, 196611, 2, 0, 196612, 0, 0, 196613, 2, 0, 327679, 2, 0, 262144, 0, 0, 262145, 2, 0, 262146, 2, 0, 262147, 0, 0, 262148, 2, 0, 262149, 2, 0, 393215, 2, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 1, 0, 327685, 2, 0, 458751, 2, 0, 393216, 2, 0, 393217, 2, 0, 393218, 2, 0, 393219, 2, 0, 393220, 2, 0, 393221, 2, 0 )

[node name="Car" type="Sprite" parent="."]
position = Vector2( 104.271, 112.68 )
texture = ExtResource( 5 )

[node name="StartButton" type="Button" parent="."]
margin_left = 787.078
margin_top = 504.537
margin_right = 845.078
margin_bottom = 534.537
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="100RoundButton" type="Button" parent="."]
margin_left = 894.713
margin_top = 504.537
margin_right = 1007.71
margin_bottom = 534.537
custom_fonts/font = SubResource( 2 )
text = "100 Round"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackLearnButton" type="Button" parent="."]
margin_left = 787.078
margin_top = 563.4
margin_right = 900.078
margin_bottom = 593.4
custom_fonts/font = SubResource( 2 )
text = "BackLearn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepLabel" type="Label" parent="."]
margin_left = 918.258
margin_top = 55.4991
margin_right = 985.258
margin_bottom = 79.4991
custom_fonts/font = SubResource( 3 )
text = "Step: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundLabel" type="Label" parent="."]
margin_left = 750.0
margin_top = 55.0
margin_right = 847.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 3 )
text = "Round: #0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="100RoundButton" to="." method="_on_100RoundButton_pressed"]
[connection signal="pressed" from="BackLearnButton" to="." method="_on_BackLearnButton_pressed"]
